Update links Sof

--- a/index.html
+++ b/index.html
@@ -119,10 +119,10 @@
             </div>
             <div class="flex-container">
                 <div class="prizes">
-                    <a href="#"><img class="top" src="https://raw.githubusercontent.com/sofiarnunes/Halls-360Project/main/img/t-shirt.png" alt=""></a>
-                    <a href="#"><img class="right" src="https://raw.githubusercontent.com/sofiarnunes/Halls-360Project/main/img/saco-web.png" alt=""></a>
-                    <a href="#"><img class="bottom" src="https://raw.githubusercontent.com/sofiarnunes/Halls-360Project/main/img/caneca-web.png" alt=""></a>
-                    <a href="#"><img class="left" src="https://raw.githubusercontent.com/sofiarnunes/Halls-360Project/main/img/caderno-web.png" alt=""></a>
+                    <a><img class="top" src="https://raw.githubusercontent.com/sofiarnunes/Halls-360Project/main/img/t-shirt.png" alt=""></a>
+                    <a><img class="right" src="https://raw.githubusercontent.com/sofiarnunes/Halls-360Project/main/img/saco-web.png" alt=""></a>
+                    <a><img class="bottom" src="https://raw.githubusercontent.com/sofiarnunes/Halls-360Project/main/img/caneca-web.png" alt=""></a>
+                    <a><img class="left" src="https://raw.githubusercontent.com/sofiarnunes/Halls-360Project/main/img/caderno-web.png" alt=""></a>
                 </div>
                 <div>
                     <h3>ou</h3>
@@ -183,7 +183,7 @@
             </div>
             <div class="mundo">
                 <p>Leva-me para este mundo...</p>
-                <a class="btn" href="/mundocrava.html">Mundo Crava</a>
+                <a class="btn">Mundo Crava</a>
             </div>
         </div>
     </section>
@@ -229,17 +229,17 @@
         <div class="flex-container wrapper">
             <div>
                 <ul class="flex-container">
-                    <a href="#" class="logo"><li><img src="https://raw.githubusercontent.com/sofiarnunes/Halls-360Project/main/img/HALLS_logo.png" alt=""></li></a>
-                    <a href="#"><li>Política de cookies</li></a>
-                    <a href="#"><li>Política de privacidade</li></a>
-                    <a href="#"><li>Termos e condições</li></a>
-                    <a href="#"><li>Contacto</li></a>
-                    <a href="#"><li>Mapa do site</li></a>
+                    <a class="logo"><li><img src="https://raw.githubusercontent.com/sofiarnunes/Halls-360Project/main/img/HALLS_logo.png" alt=""></li></a>
+                    <a><li>Política de cookies</li></a>
+                    <a><li>Política de privacidade</li></a>
+                    <a><li>Termos e condições</li></a>
+                    <a><li>Contacto</li></a>
+                    <a><li>Mapa do site</li></a>
                 </ul>
             </div>
             <div class="icons">
-                <a href="#"><i class="fab fa-facebook"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a><i class="fab fa-facebook"></i></a>
+                <a><i class="fab fa-instagram"></i></a>
             </div>
         </div>
     </footer>
