--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     <script src="js/main.js"></script>
     <script src="js/uppercase.js"></script>
     <script src="js/login-show.js"></script>
+    <script src="js/arrow_click.js"></script>
 </head>
 
 <body>
@@ -104,7 +105,7 @@
             <div class="cravas">
                 <img src="https://raw.githubusercontent.com/sofiarnunes/Halls-360Project/main/img/20_Group.png" alt="" id="win-20">
             </div>
-            <div class="arrow">
+            <div class="arrow" id="arrow">
                 <i class="fas fa-chevron-down"></i>
             </div>
         </div>
