--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>HALLS</title>
+    <title>CRAVA À HALLS</title>
     <!--Generic meta-->
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
@@ -33,8 +33,6 @@
     <link href="images/system/apple-touch-icon-120x120.png" rel="apple-touch-icon" sizes="120x120" />
     <link href="images/system/apple-touch-icon-152x152.png" rel="apple-touch-icon" sizes="152x152" />
     <link href="images/system/apple-touch-icon-180x180.png" rel="apple-touch-icon" sizes="180x180" />
-    <!--favicon-->
-
     <!-- Icon -->
     <script src="https://kit.fontawesome.com/819c470758.js" crossorigin="anonymous"></script>
     <!--Links-->
